--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,10 @@
+body
+{
+       background-color: green; 
+    
+}
+
+
 #title
 {
 
@@ -29,14 +36,7 @@ margin-top: 25px;
 }
 
 
-body
-{
-	Background-Color: #FFE4C4;
-}
-h1
-{
-color: blue;
-}
+
 
 
 
